# monitor-pc-win11

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  run-slient.vbs
.github/workflows/: pre-commit.yaml  tgbot.yaml
