[tool.poetry]
name = "monitor-pc-win11"
version = "0.1.0"
description = ""
authors = ["hachimaru <74972395+xxspell@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psutil = "^5.9.7"
pyqt5 = "^5.15.10"
pywin32 = "^306"
asyncqt = "^0.8.0"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
ignore = [
        "F811",
        "E203"
        ]
line-length = 120
